--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Batteryfy - Revolutionizing Electric Vehicle Retrofitting and Charging
+    </title>
+
+    <meta
+      name="description"
+      content="Batteryfy: India's leading network for electric vehicle (EV) retrofitting, battery conversion, and convenient EV charging solutions. Join us in saving the climate."
+    />
+    <meta
+      name="keywords"
+      content="electric vehicle, EV, retrofitting, battery conversion, EV charging, sustainable transport, green mobility, India"
+    />
+    <meta name="author" content="Batteryfy" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.yourbatteryfy.com/" />
+    <meta
+      property="og:title"
+      content="Batteryfy - Revolutionizing Electric Vehicle Retrofitting and Charging"
+    />
+    <meta
+      property="og:description"
+      content="Batteryfy: India's leading network for electric vehicle (EV) retrofitting, battery conversion, and convenient EV charging solutions. Join us in saving the climate."
+    />
+    <meta property="og:image" content="/batteryfy-logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
